--- a/_reset.scss
+++ b/_reset.scss
@@ -3,5 +3,6 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-
+    font-size: 15px;
+    padding: 2px;
 }
