--- a/_reset.scss
+++ b/_reset.scss
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: $primary-font;
     font-size: 15px;
     padding: 2px;
 }
