--- a/_variables.scss
+++ b/_variables.scss
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Hind:wght@300&family=Montserrat&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Hind:wght@300&display=swap');
 
-$primary-font: 'Montserrat', sans-serif;
-$secondary-font: 'Hind', sans-serif;;
 $text-color: #119539;
 $text-color-secondary: rgba(169, 169, 169, 0.074);
+$primary-font: 'Montserrat', sans-serif;
+$secondary-font: 'Hind', sans-serif;
 $background-color: white;
 $foreground-color: #bcffd0;
 
