added styling to header

--- a/_body.scss
+++ b/_body.scss
@@ -4,3 +4,7 @@ body {
     display: flex;
     flex-direction: column;
 }
+
+
+    //     display: grid;
+    // grid-template-rows: 4fr 1fr 1fr 1fr 1fr;
