--- a/_variables.scss
+++ b/_variables.scss
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Hind:wght@300&display=swap');
 
 $text-color: #119539;
-$text-color-secondary: rgba(169, 169, 169, 0.074);
+$text-color-secondary: rgb(47, 47, 47);
 $primary-font: 'Montserrat', sans-serif;
 $secondary-font: 'Hind', sans-serif;
 $background-color: white;
