--- a/_nav.scss
+++ b/_nav.scss
@@ -7,11 +7,9 @@ nav {
     font-weight: 400;
 }
 
-// @media screen and (min-width: 768px) {
-//     nav {
-//         display: unset;
-//     //     display: grid;
-//     // grid-template-rows: 4fr 1fr 1fr 1fr 1fr;
-//     }
-    
-// }
+@media screen and (min-width: 768px) {
+    nav {
+        display: unset;
+    }
+}
+
