updated technical skills section on index.html

--- a/_header.scss
+++ b/_header.scss
@@ -3,7 +3,7 @@
 header {
     padding-top: 1rem;
     h1 {
-        text-align: center;
+        text-align: left;
         font-family: $primary-font;
         font-size: 1.25rem;
         color: $text-color-secondary;
