--- a/style.scss
+++ b/style.scss
@@ -2,6 +2,8 @@
 @use "./reset";
 @use "./variables" as *;
 @use "./body";
+@use "./about";
+@use "./skills";
 @use "./projects";
 @use "./header";
 
