made chnages to skills styles

--- a/_about.scss
+++ b/_about.scss
@@ -19,6 +19,7 @@
     .about__paragraph {
         font-family: $secondary-font;
         color: $text-color-secondary;
+        font-size: 1rem;
         padding: 1rem;
     }
 }
