--- a/_skills.scss
+++ b/_skills.scss
@@ -1,8 +1,43 @@
-@use "./skills"
+@use "./variables" as *;
 
-.skills-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-auto-rows: 1fr 1fr 1fr;
-    gap: 0.5rem;
+.skills {
+    .skills__title {
+        font: $primary-font;
+        font-size: 2rem;
+        color: $text-color;
+        text-align: center;
+        padding: 1rem;
+    }
+    .skills__intro {
+        font: $secondary-font;
+        color: $text-color-secondary;
+        font-size: 1rem;
+        text-align: center;
+        padding: 1rem;
+    }
+    .skills__container {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-auto-rows: 1fr 1fr 1fr;
+        gap: 0.5rem;
+
+        p {
+            color: $text-color;
+            text-align: center;
+
+        }
+    
+        img {
+            width: 3rem;
+            display: block;
+            margin-right: auto;
+            margin-left: auto;
+
+        }
+    }
+
+
+
+
 }
+
