--- a/style.css
+++ b/style.css
@@ -48,15 +48,15 @@ body {
 }
 
 .skills .skills__title {
-  font: "Montserrat", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 2rem;
   color: #119539;
   text-align: center;
   padding: 1rem;
 }
 .skills .skills__intro {
-  font: "Hind", sans-serif;
   color: rgb(47, 47, 47);
+  font-family: "Hind", sans-serif;
   font-size: 1rem;
   text-align: center;
   padding: 1rem;
@@ -66,6 +66,7 @@ body {
   grid-template-columns: 1fr 1fr 1fr;
   grid-auto-rows: 1fr 1fr 1fr;
   gap: 0.5rem;
+  padding: 1rem;
 }
 .skills .skills__container p {
   color: #119539;
@@ -78,8 +79,12 @@ body {
   margin-left: auto;
 }
 
-#projects__secondary {
-  display: none;
+#projects h1 {
+  font-family: "Montserrat", sans-serif;
+  color: #119539;
+  text-align: center;
+  font-size: 2rem;
+  padding: 1rem;
 }
 
 header {
