--- a/_variables.scss
+++ b/_variables.scss
@@ -6,5 +6,5 @@ $text-color-secondary: rgb(47, 47, 47);
 $primary-font: 'Montserrat', sans-serif;
 $secondary-font: 'Hind', sans-serif;
 $background-color: white;
-$foreground-color: #c6ecd2;
+$foreground-color: #dbf3e3;
 
