--- a/_projects.scss
+++ b/_projects.scss
@@ -45,16 +45,35 @@
         color: $text-color-secondary;
         padding: 0.5rem;
     }
+
+    #buttons {
+        // display: flex;
+        // align-items: center;
+        // text-align:start;
+        // align-self: center;
+        // display: block;
+        // margin-top: auto;
+        // margin-bottom: auto;
+    }
     .card__button, .card__button--secondary {
-        font-size: 1rem;
+        // display: flex;
+        // align-items: center;
+        // text-align: center;
+        // flex-direction: row;
+        // justify-content: center;
+        // flex-basis: auto;
+        font-size: 1.25rem;
         font-weight: bold;
         font-family: $primary-font;
         color: $text-color;
         background-color: $background-color;
         border-radius: 0.75rem;
         border-color: $text-color;
+        border-width: 0.3rem;
         gap: 0.5rem;
-        padding: 0.5rem;
+        padding: 0.3rem;
+        
 
     }
 }
+
