--- a/style.css
+++ b/style.css
@@ -120,15 +120,16 @@ body {
   padding: 0.5rem;
 }
 .card .card__button, .card .card__button--secondary {
-  font-size: 1rem;
+  font-size: 1.25rem;
   font-weight: bold;
   font-family: "Montserrat", sans-serif;
   color: #119539;
   background-color: white;
   border-radius: 0.75rem;
   border-color: #119539;
+  border-width: 0.3rem;
   gap: 0.5rem;
-  padding: 0.5rem;
+  padding: 0.3rem;
 }
 
 header {
