added logos to footer in scss

--- a/_projects.scss
+++ b/_projects.scss
@@ -46,15 +46,15 @@
         padding: 0.5rem;
     }
 
-    #buttons {
-        // display: flex;
-        // align-items: center;
-        // text-align:start;
-        // align-self: center;
-        // display: block;
-        // margin-top: auto;
-        // margin-bottom: auto;
-    }
+    // #buttons {
+    //     // display: flex;
+    //     // align-items: center;
+    //     // text-align:start;
+    //     // align-self: center;
+    //     // display: block;
+    //     // margin-top: auto;
+    //     // margin-bottom: auto;
+    // }
     .card__button, .card__button--secondary {
         // display: flex;
         // align-items: center;
