--- a/_variables.scss
+++ b/_variables.scss
@@ -3,6 +3,7 @@
 
 $text-color: #119539;
 $text-color-secondary: rgb(47, 47, 47);
+$text-color-tertiary: white;
 $primary-font: 'Montserrat', sans-serif;
 $secondary-font: 'Hind', sans-serif;
 $background-color: white;
