--- a/_footer.scss
+++ b/_footer.scss
@@ -1,6 +1,25 @@
 @use "./variables" as *;
 
 .footer {
+    width: 100%;
+    height: 13.5rem;
+    padding: 1rem 2rem 1rem 2rem;
     display: grid;
-    
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 1rem;
+    background-color: $text-color-secondary;
+
+    .footer:last-child {
+        grid-column-start: 1;
+        grid-column-end: 4;
+    }
+
+    .footer__email {
+        font-family: $primary-font;
+        color: $text-color-tertiary;
+        font-size: 1rem;
+        // display: flex;
+        // align-items: center;
+
+    }
 }
