--- a/style.css
+++ b/style.css
@@ -157,4 +157,22 @@ header .intro__image {
   .intro__image {
     display: unset;
   }
+}
+.footer {
+  width: 100%;
+  height: 13.5rem;
+  padding: 1rem 2rem 1rem 2rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 1rem;
+  background-color: rgb(47, 47, 47);
+}
+.footer .footer:last-child {
+  grid-column-start: 1;
+  grid-column-end: 4;
+}
+.footer .footer__email {
+  font-family: "Montserrat", sans-serif;
+  color: white;
+  font-size: 1rem;
 }/*# sourceMappingURL=style.css.map */
