added get in tough button to nav bar

--- a/_body.scss
+++ b/_body.scss
@@ -1,9 +1,9 @@
 @use "variables";
 
-body {
-    display: flex;
-    flex-direction: column;
-}
+// body {
+//     display: flex;
+//     flex-direction: column;
+// }
 
 
     //     display: grid;
