--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@
 .nav-bar {
   text-align: center;
   font-family: "Hind", sans-serif;
-  font-weight: 400;
   height: 3rem;
   margin: 3rem 9rem;
   display: none;
@@ -22,15 +21,37 @@
   .nav-bar {
     display: unset;
     display: grid;
-    grid-template-columns: 6fr 2fr 2fr 2fr 2fr;
-    font-size: large;
+    grid-template-columns: 10fr 3fr 3fr 3fr 3fr;
+    font-size: 20rem;
   }
   .nav-bar .nav-bar__name {
     text-align: left;
+    padding: 0.5rem;
+    text-decoration: none;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+  }
+  .nav-bar .nav-bar__home,
+.nav-bar .nav-bar__about,
+.nav-bar .nav-bar__projects {
+    padding: 0.5rem;
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   .nav-bar .nav-bar__getInTouch {
+    background-color: #dbf3e3;
+    color: black;
+    padding: 0.5rem;
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-style: solid;
     border-color: #119539;
-    border-width: 0.1rem;
+    border-width: 0.2rem;
     border-radius: 0.25rem;
   }
 }
