--- a/_header.scss
+++ b/_header.scss
@@ -1,15 +1,15 @@
 @use "./variables" as *;
 
-header {
+.intro {
     padding-top: 1rem;
-    h1 {
+    .intro__name {
         text-align: left;
         font-family: $primary-font;
         font-size: 1.25rem;
         color: $text-color-secondary;
         padding: 1rem;
     }
-    h2 {
+    .intro__occupation {
         text-align: left;
         font-family: $primary-font;
         font-size: 3rem;
@@ -20,13 +20,47 @@ header {
         display: none;
 
     }
-}
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1024px) {
     .intro__image {
         display: unset;
     }
+        
+    margin: 3rem 11.5rem;
+    display: grid;
+        grid-template-areas:
+        "name image"
+        "occupation image";
+        grid-gap: 1rem;
+
+    .intro {
+        display: grid;
+        grid-template-areas:
+        "name image"
+        "occupation image";
+        grid-gap: 1rem;
+    }
+    
+    .intro__image {
+        grid-area: image;
+    }
+
+    .intro__name {
+        grid-area: name;
+        text-align: start;
+        display: flex;
+        align-items: flex-end;
+        
+    }
+
+    .intro__occupation {
+        grid-area: occupation;
+    }
+
+
 }
+}
+
 
 
 
