--- a/style.css
+++ b/style.css
@@ -75,6 +75,34 @@
   font-size: 1rem;
   padding: 1rem;
 }
+@media screen and (min-width: 1024px) {
+  .about {
+    margin: 3rem 11.25rem;
+    display: grid;
+    grid-template-areas: "image title" "image text";
+    grid-gap: 1rem;
+  }
+  .about .about__image {
+    width: 30rem;
+    grid-area: image;
+  }
+  .about .about__text {
+    grid-area: text;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .about .about__title {
+    grid-area: title;
+    text-align: left;
+    padding: 10rem 0 0 10rem;
+  }
+  .about .about__paragraph {
+    grid-area: text;
+    text-align: justify;
+    padding: 0 0 0 10rem;
+  }
+}
 
 .skills .skills__title {
   font-family: "Montserrat", sans-serif;
