--- a/style.css
+++ b/style.css
@@ -135,6 +135,27 @@
   margin-right: auto;
   margin-left: auto;
 }
+@media screen and (min-width: 1024px) {
+  .skills {
+    display: unset;
+  }
+  .skills .skills__title {
+    font-size: 3rem;
+    text-align: center;
+  }
+  .skills .skills__intro {
+    font-size: 1rem;
+    width: 30.25rem;
+    margin: auto;
+  }
+  .skills .skills__container {
+    display: flex;
+    flex: auto;
+    justify-content: center;
+    align-items: flex-end;
+    gap: 1.5rem;
+  }
+}
 
 #projects__secondary {
   display: none;
