--- a/_about.scss
+++ b/_about.scss
@@ -44,6 +44,7 @@
         }
         .about__title {
             grid-area: title;
+            font-size: 3rem;
             text-align: left;
             padding: 10rem 0 0 10rem;
         }
