--- a/_about.scss
+++ b/_about.scss
@@ -41,6 +41,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            font-size: 1.5rem;
         }
         .about__title {
             grid-area: title;
